--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moore-curve-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Print the Moore Curve to the console!",
   "main": "./src/index.js",
   "bin": {
@@ -31,6 +31,6 @@
     "unicode"
   ],
   "dependencies": {
-    "hilbert-curve-cli": "^1.1.0"
+    "hilbert-curve-cli": "1.2.1"
   }
 }
